--- a/config/tree_of_life_200M/safe_download_config.yaml
+++ b/config/tree_of_life_200M/safe_download_config.yaml
@@ -4,7 +4,8 @@ path_to_output_folder: "path_to_output_folder" # Path to the output folder
 initializer_type: "tol200m_general" # DON'T CHANGE THIS VALUE
 included_sources:
   - "gbif"
-excluded_servers_path: "excluded_servers_general_tol.csv" # Path to the file with the list of excluded servers
+  - "eol"
+excluded_servers_path: "excluded_servers_safe_tol.csv" # Path to the file with the list of excluded servers
 
 scripts:
   # Wrapper scripts to submit jobs to the cluster
@@ -33,12 +34,6 @@ scripts:
 # Order of the rules does not matter
 # DON'T CHANGE THIS VALUE
 schedule_rules:
-  5000: 40
-  1000: 20
-  500: 10
-  200: 8
-  100: 4
-  50: 2
   1: 1
 
 # Structure of the output folder that will be created automatically
@@ -63,8 +58,8 @@ downloader_parameters:
   image_size: 720 # Size of the image to be downloaded
   logger_level: "INFO" # Logger level
   batch_size: 10000 # DON'T CHANGE THIS VALUE
-  rate_multiplier: 0.8 # DON'T CHANGE THIS VALUE
-  default_rate_limit: 10 # DON'T CHANGE THIS VALUE
+  rate_multiplier: 0.3 # DON'T CHANGE THIS VALUE
+  default_rate_limit: 6 # DON'T CHANGE THIS VALUE
 
 tools_parameters:
   num_workers: 0
