--- a/config/tree_of_life_200M/eol_download_config.yaml
+++ b/config/tree_of_life_200M/eol_download_config.yaml
@@ -1,6 +1,6 @@
 account: "account_name" # Account name for the cluster
-path_to_input: "path_to_input_file" # Path to the input file with the list of servers
-path_to_output_folder: "path_to_output_folder" # Path to the output folder
+path_to_input: "path/to/input_file" # Path to the input file with the list of servers
+path_to_output_folder: "path/to/output_folder" # Path to the output folder
 initializer_type: "tol200m_general" # DON'T CHANGE THIS VALUE
 included_sources:
   - "eol"
@@ -9,21 +9,21 @@ dst_error_folder: "" # The destination folder where the error files will be copi
 
 scripts:
   # Wrapper scripts to submit jobs to the cluster
-  general_submitter: "path_to_general_submitter_script.sh"
-  tools_submitter: "path_to_tools_submitter_script.sh"
-  mpi_submitter: "path_to_mpi_submitter_script.sh"
-  schedule_creator_submitter: "path_to_schedule_creator_submitter_script.sh"
+  general_submitter: "path/to/general_submitter_script.sh"
+  tools_submitter: "path/to/tools_submitter_script.sh"
+  mpi_submitter: "path/to/mpi_submitter_script.sh"
+  schedule_creator_submitter: "path/to/schedule_creator_submitter_script.sh"
   # Cluster job's scripts
-  initialization_script: "path_to_initialization_script.slurm"
-  profiling_script: "path_to_profiling_script.slurm"
-  schedule_creation_script: "path_to_schedule_creation_script.slurm"
-  verify_script: "path_to_verify_script.slurm"
-  download_script: "path_to_download_script.slurm"
+  initialization_script: "path/to/initialization_script.slurm"
+  profiling_script: "path/to/profiling_script.slurm"
+  schedule_creation_script: "path/to/schedule_creation_script.slurm"
+  verify_script: "path/to/verify_script.slurm"
+  download_script: "path/to/download_script.slurm"
   # tools scripts
-  tools_filter_script: "path_to_tools_filter_script.slurm"
-  tools_scheduling_script: "path_to_tools_scheduling_script.slurm"
-  tools_worker_script: "path_to_tools_worker_script.slurm"
-  tools_verification_script: "path_to_tools_verification_script.slurm"
+  tools_filter_script: "path/to/tools_filter_script.slurm"
+  tools_scheduling_script: "path/to/tools_scheduling_script.slurm"
+  tools_worker_script: "path/to/tools_worker_script.slurm"
+  tools_verification_script: "path/to/tools_verification_script.slurm"
 
 # Rules for the schedule creation
 # They determine how many simultaneous downloader instances can be run on the same server
